--- a/src/components/shield-option-trade/pages/trade/orders/active/history-table.module.less
+++ b/src/components/shield-option-trade/pages/trade/orders/active/history-table.module.less
@@ -3,26 +3,31 @@
 .cellGroup {
   display: grid;
   grid-row-gap: 4px;
+}
 
-  .cellMainLong {
-    .font(14, @color-long);
-  }
-  .cellMainShort {
-    .font(14, @color-short);
-  }
-  .cellMain {
-    .font(14, @color-normal-font);
-  }
+.cellMainLong {
+  .font(14, @color-long);
+}
+.cellMainShort {
+  .font(14, @color-short);
+}
+.cellMain {
+  .font(14, @color-normal-font);
+}
 
-  .cellDesc {
-    .font(12, @color-desc);
-  }
-  .cellDescLong {
-    .font(12, @color-long);
-  }
-  .cellDescShort {
-    .font(12, @color-short);
-  }
+.cellDesc {
+  .font(12, @color-desc);
+}
+.cellDescLong {
+  .font(12, @color-long);
+}
+.cellDescShort {
+  .font(12, @color-short);
+}
+
+.idColMobile {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .extRow {
@@ -31,5 +36,4 @@
   grid-row-gap: 30px;
   grid-column-gap: 10px;
   grid-template-columns: 1fr 1fr;
-
 }
