--- a/src/components/shield-option-trade/pages/share/share.module.less
+++ b/src/components/shield-option-trade/pages/share/share.module.less
@@ -1,2 +1,19 @@
-@import "../../../shield-option-common/common";
+@import '../../../shield-option-common/common';
 
+.shareOverlay {
+  display: grid;
+  background-color: @white;
+  box-shadow: 0 0 4px #dddddd;
+  border-radius: @border-radius-btn2;
+
+}
+.shareOverlayItem {
+  display: flex;
+  .flexCenter();
+  .font(14, @color-highlight);
+  height: 50px;
+  border-bottom: 1px solid @color-divider;
+  padding: 0 16px;
+  white-space: nowrap;
+  cursor: pointer;
+}
