--- a/src/components/shield-option-trade/pages/trade/orders/active/active-table.module.less
+++ b/src/components/shield-option-trade/pages/trade/orders/active/active-table.module.less
@@ -53,6 +53,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-row-gap: 24px;
+  grid-column-gap: 16px;
   width: 100%;
   padding: 16px 16px;
 }
@@ -75,4 +76,9 @@
   &:hover {
     color: desaturate(@color-highlight, 60%);
   }
+}
+
+.idColMobile {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
