--- a/src/components/shield-option-trade/pages/referral/referral/my-referral.module.less
+++ b/src/components/shield-option-trade/pages/referral/referral/my-referral.module.less
@@ -38,6 +38,12 @@
         }
       }
     }
+
+    .moreBtn {
+      padding-top: 40px;
+      max-width: 400px;
+      margin: auto;
+    }
   }
 
   .balance {
