--- a/src/components/shield-option-common/head/menu/option-menu-list.module.less
+++ b/src/components/shield-option-common/head/menu/option-menu-list.module.less
@@ -161,7 +161,7 @@
 .mobDropBtn(@dark: false) {
   display: flex;
   font-size: 20px;
-  height: 100%;
+  height: 60px;
   color: if(@dark, @white, @color-normal-font);
 }
 
