--- a/src/components/shield-option-trade/pages/head/head.module.less
+++ b/src/components/shield-option-trade/pages/head/head.module.less
@@ -23,6 +23,12 @@
     padding-left: 16px;
     padding-right: 16px;
     height: 60px;
+
+    .dropdownInfo {
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-column-gap: 16px;
+    }
   }
 
   .walletInfo {
