--- a/src/components/common/buttons/select-btn.module.less
+++ b/src/components/common/buttons/select-btn.module.less
@@ -59,14 +59,16 @@
 
 :global(.shield-trade) {
   .selectSquare {
+    position: relative;
     display: grid !important;
-    grid-template-columns: 32px 1fr;
-    grid-column-gap: 12px;
+    grid-template-columns: 1fr;
+    grid-row-gap: 12px;
 
-    justify-items: start;
-    justify-content: start;
+    justify-items: center;
+    justify-content: center;
     padding: 12px 8px;
     width: 100%;
+    height: 105px;
     border: 2px solid #f1f2f5;
     border-radius: 8px;
 
@@ -76,7 +78,6 @@
 
     &:hover:not(.disabled) {
       background-color: #f7f8fa;
-
       transition-property: background-color;
       transition-duration: 500ms;
       transition-timing-function: ease-out;
@@ -90,13 +91,31 @@
       }
     }
 
-    span {
-      display: block;
-      width: 100%;
-      line-height: 12px;
-      font-size: 12px;
-      color: #666666;
-      text-align: left;
+    :global {
+      .wallet-name {
+        font-size: 12px;
+        line-height: 1.4;
+        text-align: center;
+      }
+
+      .wallet-active {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #00a82a;
+        outline: 2px solid #a7ff8e;
+      }
+
+      .install-wallet-name {
+        font-size: 12px;
+        line-height: 1.4;
+        text-align: center;
+        color: #999999;
+      }
     }
   }
 
@@ -130,14 +149,16 @@
 
 :global(.shield-stone) {
   .selectSquare {
+    position: relative;
     display: grid !important;
-    grid-template-columns: 32px 1fr;
-    grid-column-gap: 12px;
+    grid-template-columns: 1fr;
+    grid-row-gap: 12px;
 
-    justify-items: start;
-    justify-content: start;
+    justify-items: center;
+    justify-content: center;
     padding: 12px 8px;
     width: 100%;
+    height: 105px;
     border: 2px solid #f1f2f5;
     border-radius: 16px;
 
@@ -166,13 +187,31 @@
       cursor: default;
     }
 
-    span {
-      display: block;
-      width: 100%;
-      line-height: 12px;
-      font-size: 12px;
-      color: #666666;
-      text-align: left;
+    :global {
+      .wallet-name {
+        font-size: 12px;
+        line-height: 1.4;
+        text-align: center;
+      }
+
+      .wallet-active {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #00a82a;
+        outline: 2px solid #a7ff8e;
+      }
+
+      .install-wallet-name {
+        font-size: 12px;
+        line-height: 1.4;
+        text-align: center;
+        color: #999999;
+      }
     }
   }
 
@@ -208,14 +247,16 @@
 
 :global(.stone-omni) {
   .selectSquare {
+    position: relative;
     display: grid !important;
-    grid-template-columns: 32px 1fr;
-    grid-column-gap: 12px;
+    grid-template-columns: 1fr;
+    grid-row-gap: 12px;
 
-    justify-items: start;
-    justify-content: start;
+    justify-items: center;
+    justify-content: center;
     padding: 12px 8px;
     width: 100%;
+    height: 105px;
     border: 2px solid #f1f2f5;
     border-radius: 16px;
 
@@ -244,13 +285,31 @@
       cursor: default;
     }
 
-    span {
-      display: block;
-      width: 100%;
-      line-height: 12px;
-      font-size: 12px;
-      color: #666666;
-      text-align: left;
+    :global {
+      .wallet-name {
+        font-size: 12px;
+        line-height: 1.4;
+        text-align: center;
+      }
+
+      .wallet-active {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #00a82a;
+        outline: 2px solid #a7ff8e;
+      }
+
+      .install-wallet-name {
+        font-size: 12px;
+        line-height: 1.4;
+        text-align: center;
+        color: #999999;
+      }
     }
   }
 
