--- a/src/components/common/overlay/result-mask.module.less
+++ b/src/components/common/overlay/result-mask.module.less
@@ -18,6 +18,10 @@
   .content {
     border-radius: 30px;
   }
+
+  a {
+    color: #e5aa0b;
+  }
 }
 
 .content {
@@ -82,6 +86,7 @@
 
     &.mobile {
       margin-bottom: 32px;
+      font-size: 14px;
     }
   }
 }
