--- a/src/components/connect-wallet/connect-wallet-page.module.less
+++ b/src/components/connect-wallet/connect-wallet-page.module.less
@@ -10,7 +10,10 @@
 
 .wrapperPop {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-row-gap: 20px;
-  grid-column-gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row-gap: 16px;
+  grid-column-gap: 16px;
+  grid-template-rows: auto auto;
+
+  align-content: start;
 }
