--- a/src/components/shield-option-trade/pages/head/network-switch.module.less
+++ b/src/components/shield-option-trade/pages/head/network-switch.module.less
@@ -4,6 +4,13 @@
   display: flex;
   line-height: 1;
   align-items: center;
+  cursor: default;
+
+  .labelName {
+    display: flex;
+    align-items: center;
+    padding-left: 8px;
+  }
 }
 
 .nTrigger {
